--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -8,7 +8,7 @@
 .blue {
     background: rgb(67, 111, 255);
 }
-/*
-TODO 1
-Add a CSS rule for the pink button
-*/
+
+.pink {
+    background: rgb(255, 192, 224);
+}
